# SCVSAI_prog

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup_docker.sh
.github/workflows/: deploy.yml
src/: eda.py  train.py
tests/: test_eda.py  test_train.py
