[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scvsai"
version = "0.1.0"
description = "pkg per il progetto universitario del corso di Sviluppo e ciclo di vita di sofware di artificial intelligence che si basa su ResNet18 e sfrutta il dataset Fashion-MNIST per classificare capi di vestiario"
authors = [
    {name = "Novaaz", email = "leonardonovazzi@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["machine-learning", "computer-vision", "fashion-mnist", "pytorch"]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scikit-learn>=1.0.0",
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=2.15.0",
    "black>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/Novaaz/SCVSAI_prog"
Repository = "https://github.com/Novaaz/SCVSAI_prog"
Issues = "https://github.com/Novaaz/SCVSAI_prog/issues"

[project.scripts]
scvsai-train = "src.train:main"
scvsai-eda = "src.eda:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pylint.messages_control]
disable = ["C0103", "R0903", "R0913"]
